# avstats

./: .gitignore  AvStats_demo.ipynb  README.md  classes.py  data_loader.py  imports.py  pyproject.toml
.github/workflows/: model_training.yml  pytest.yml
avstats/: AvStats_BeforeNewData.ipynb  AvStats_EDA.ipynb  AvStats_EDA_Before.ipynb  AvStats_ML.ipynb  AvStats_demo.ipynb  DatabaseSchemas.md  README.md  aircraft_data.ipynb  airport_mapping.py  classes.py  config.py  config.yaml  dependencies.txt  imports.py  model_summaries.csv  passengers.ipynb  requirements.txt  run_AvStats_EDA.py  run_AvStats_ML.py  run_ML.py  run_pipeline.py  utils.py  weather.ipynb  weather_python_library.ipynb
avstats/.virtual_documents/: AvStats_demo.ipynb
avstats/classes/: FlightPerformance.py
avstats/core/: DataLoader.py  EDA_utils.py  Visualizations.py  airport_mapping.json  config.py  flight_analysis_utils.py  functions.py  general_utils.py  utils.py
avstats/core/EDA/: ColumnsCorrelation.py  DataPreprocessing.py  DataProcessing.py  (+10 more)
data/: BRU2023_weather.csv  avia_par_be_page_spreadsheet.xlsx  df_merged.csv  df_normalization_for_nn.csv  df_vif_BRU_MAD.csv  df_vif_passengers.csv
tests/: test_CheckMissingValues.py  test_FlightPerformance.py  test_Multicollinearity.py  test_NewFeatures.py  test_WeatherData.py  test_classes.py  test_utils.py
tests/EDA/: test_DataProcessing.py  test_MergeData.py
tests/ML/: test_DataPreparation.py  test_ModelEvaluation.py  test_ModelTraining.py  test_Multicollinearity.py  test_OneHotEncoding.py  test_ResidualAnalysis.py  test_TimeSeriesAnalysis.py
(+84 files in other folders)
