[tool.poetry]
name = "avstats"
version = "0.1.0"
description = ""
authors = ["Marco <marco@mdigennaro.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
pytest = "^8.3.3"
meteostat = "^1.6.8"
tensorflow = "^2.18.0"
airportsdata = "^20241001"
pydantic = "^2.0.0"
openpyxl = "^3.1.5"
plotly = "^5.24.1"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
